# MyCommercial

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh
doc/: INSTALLATION.md  UTILISATION.md
scripts/: linkedin_bridge.py
src/: main.rs
src/ai/: mod.rs
src/datagouv/: mod.rs
src/db/: mod.rs
src/linkedin/: mod.rs
src/models/: mod.rs
src/odoo/: mod.rs
src/settings/: mod.rs
src/ui/: app.rs  screens.rs  theme.rs
src/ui/panels/: contacts.rs  dashboard.rs  messages.rs  mod.rs  reports.rs  search.rs  settings.rs  solutions.rs
